js/src/tests/test262/built-ins/Error/isError/non-error-objects-other-realm.js
var
other
=
262
.
createRealm
(
)
.
global
;
assert
.
sameValue
(
Error
.
isError
(
new
other
.
Object
(
)
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
new
other
.
Array
(
)
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
new
other
.
Function
(
'
'
)
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
new
other
.
RegExp
(
'
a
'
)
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
other
.
Error
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
other
.
EvalError
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
other
.
RangeError
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
other
.
ReferenceError
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
other
.
SyntaxError
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
other
.
TypeError
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
other
.
URIError
)
false
)
;
if
(
typeof
other
.
AggregateError
!
=
=
'
undefined
'
)
{
assert
.
sameValue
(
Error
.
isError
(
other
.
AggregateError
)
false
)
;
}
if
(
typeof
other
.
SuppressedError
!
=
=
'
undefined
'
)
{
assert
.
sameValue
(
Error
.
isError
(
other
.
SuppressedError
)
false
)
;
}
reportCompare
(
0
0
)
;
